--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.76.3",
+    "xlsx": "^0.18.5"
   }
 }
